# lbfgs

./: .clang-format  .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  flake.nix
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt  empty_example.cpp
include/lbfgs/: solver.hpp  solver_error.hpp  solver_status.hpp
test/: CMakeLists.txt
test/source/: lbfgs_test.cpp
